# postprod-ide

./: .gitignore  .rules  CLAUDE.md  Cargo.toml  README.md
assets/PostProd_Tools_Branding/: BRANDING.md
assets/agent-skills/: AUTOMATIONS.toml  SKILL.md
assets/config/: AGENTS.toml  AUTOMATIONS.toml  GUIDE.md  SKILL.md  TOOLS.toml
assets/config/automations/: _create-automation.toml  _edit-automation.toml  _finetune-automation.toml  _test-path-param.toml  _test-select-param.toml  batch-process.toml  bounce-trilha.toml  compare-texts.toml  export-normalize.toml  full-delivery.toml  import-loc-marker.toml  import-solo-track.toml  make-video-from-source.toml  new-job-setup.toml  rename-sessions.toml  rename-tracks.toml  self-improvement-loop.toml  strip-id-prefix.toml  test-native-agent.toml  vol-up-all.toml  vol-up-bounce-all.toml  volume-adjust.toml
assets/config/skills/ptsl-tools/: SKILL.md  reference.md  workflows.md
assets/keymaps/: default-linux.json  default-macos.json
assets/settings/: default.json  initial_postprod_settings.json  initial_user_settings.json
assets/tools/: TOOLS.toml
crates/agent_ui/src/: agent_panel.rs  agent_ui.rs
crates/agent_ui/src/acp/: message_editor.rs
crates/agent_ui/src/acp/thread_view/: active_thread.rs
crates/assets/src/: assets.rs
crates/client/src/: telemetry.rs
crates/dashboard/: Cargo.toml  build.rs
crates/dashboard/src/: ai_agents_section.rs  automation_card.rs  automation_picker.rs  card.rs  config.rs  context_editor.rs  dashboard.rs  dashboard_as_tab_tests.rs  dashboard_panel.rs  event_inbox.rs  folder_bar.rs  hotkeys.rs  param_drop.rs  paths.rs  persistence.rs  pipeline_card.rs  popup_inbox.rs  rules_integration.rs  runtime.rs  scheduler_ui.rs  section.rs  tool_card.rs  watcher_card.rs
crates/db/src/: db.rs
crates/feature_flags/src/: flags.rs
crates/git_ui/src/: git_ui.rs
crates/gpui/src/app/: entity_map.rs
crates/gpui/src/elements/: div.rs
crates/paths/src/: paths.rs
crates/platform_title_bar/src/: platform_title_bar.rs
crates/postprod_dashboard_config/: Cargo.toml
crates/postprod_dashboard_config/src/: edit.rs  postprod_dashboard_config.rs  watcher_config.rs
crates/postprod_events/: Cargo.toml
crates/postprod_events/src/: bus.rs  notify.rs  postprod_events.rs
crates/postprod_events/tests/: path_guard.rs
crates/postprod_popup_notification/: Cargo.toml
crates/postprod_popup_notification/src/: postprod_popup_notification.rs
crates/postprod_rules/: Cargo.toml
crates/postprod_rules/src/: note_store.rs  postprod_rules.rs
crates/postprod_scheduler/: Cargo.toml
crates/postprod_scheduler/src/: postprod_scheduler.rs
crates/postprod_watchers/: Cargo.toml
crates/postprod_watchers/src/: postprod_watchers.rs  tests.rs
crates/postprod_watchers/tests/: runtime.rs
crates/project_panel/src/: project_panel.rs
crates/recent_projects/src/: recent_projects.rs
crates/release_channel/src/: lib.rs
crates/settings/src/: settings.rs  vscode_import.rs
crates/settings_content/src/: project.rs  settings_content.rs
crates/settings_ui/src/: page_data.rs
crates/sidebar/: Cargo.toml
crates/sidebar/src/: sidebar.rs
crates/telemetry/src/: telemetry.rs
crates/terminal_view/src/: terminal_path_like_target.rs
crates/title_bar/src/: title_bar.rs
crates/workspace/src/: item.rs  multi_workspace.rs  pane.rs  workspace.rs
crates/zed/: Cargo.toml  build.rs
crates/zed/resources/: Document.icns
crates/zed/resources/info/: AppNap.plist
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: app_menus.rs
crates/zed_actions/src/: lib.rs
old_zed/docs/: ZED_FORK_PLAN.md
script/: clippy  dev-clean  dev-deploy  package-postprod  package-protools  test-versioning
script/postprod/: README.md  check-workspace-crate-collisions  clean-target  dev-clean  dev-deploy  package-postprod  test-pipelines  test-versioning
