[package]
name = "dashboard"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/dashboard.rs"

[dependencies]
gpui.workspace = true
serde.workspace = true
task.workspace = true
toml.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
