[package]
name = "dashboard"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/dashboard.rs"

[dependencies]
agent_ui.workspace = true
anyhow.workspace = true
editor.workspace = true
futures.workspace = true
fuzzy.workspace = true
global-hotkey.workspace = true
gpui.workspace = true
log.workspace = true
menu.workspace = true
paths.workspace = true
picker.workspace = true
postprod_scheduler.workspace = true
project.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
task.workspace = true
toml.workspace = true
toml_edit.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true

[dev-dependencies]
tempfile.workspace = true
