[package]
name = "dashboard"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/dashboard.rs"

[dependencies]
agent.workspace = true
agent_settings.workspace = true
agent_ui.workspace = true
anyhow.workspace = true
dirs.workspace = true
editor.workspace = true
fs.workspace = true
futures.workspace = true
fuzzy.workspace = true
global-hotkey.workspace = true
gpui.workspace = true
libc.workspace = true
log.workspace = true
menu.workspace = true
paths.workspace = true
picker.workspace = true
postprod_dashboard_config.workspace = true
postprod_events.workspace = true
postprod_popup_notification.workspace = true
postprod_rules.workspace = true
postprod_scheduler.workspace = true
postprod_watchers.workspace = true
chrono.workspace = true
project.workspace = true
schemars.workspace = true
serde.workspace = true
settings.workspace = true
serde_json.workspace = true
smol.workspace = true
task.workspace = true
toml.workspace = true
toml_edit.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true

[dev-dependencies]
fs = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
remote_connection = { workspace = true, features = ["test-support"] }
serde_json.workspace = true
settings = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
theme = { workspace = true, features = ["test-support"] }
theme_settings.workspace = true
util = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
