[package]
name = "postprod_dashboard_config"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/postprod_dashboard_config.rs"

[dependencies]
anyhow.workspace = true
dirs.workspace = true
log.workspace = true
postprod_scheduler.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true
