[package]
name = "postprod_scheduler"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/postprod_scheduler.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
croner.workspace = true
gpui.workspace = true
gpui_util.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
