[package]
name = "postprod_watchers"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/postprod_watchers.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fs.workspace = true
futures.workspace = true
globset.workspace = true
gpui.workspace = true
log.workspace = true
postprod_dashboard_config.workspace = true
postprod_events.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
thiserror.workspace = true
toml.workspace = true
util.workspace = true

[dev-dependencies]
fs = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
util = { workspace = true, features = ["test-support"] }
